refactor: comments added